# cpp_templates

chapter01/max1/: CMakeLists.txt  max1.cpp  max1.hpp
chapter01/max2/: max2.cpp
chapter01/max3ref/: CMakeLists.txt  max3ref.cpp
chapter01/max3val/: max3val.cpp
chapter01/max4/: max4.cpp
chapter01/maxauto/: maxauto.hpp
chapter01/maxcommon/: maxcommon.hpp
chapter01/maxconstexpr/: maxconstexpr.hpp
chapter01/maxdecltype/: maxdecltype.hpp
chapter01/maxdecltypedecay/: maxdecltypedecay.hpp
chapter01/maxdefault1/: maxdefault1.hpp
chapter01/maxdefault3/: maxdefault3.hpp
chapter01/maxdefault4/: maxdefault4.hpp
chapter02/addvalue/: addvalue.hpp
chapter02/message/: CMakeLists.txt
chapter02/stack1/: CMakeLists.txt  stack1.hpp  stack1test.cpp
chapter02/stack2/: stack2.hpp
chapter02/stack3/: CMakeLists.txt  stack3.hpp  stack3test.cpp
chapter02/stacknontype/: stacknontype.hpp
chapter02/stackpartspec/: stackpartspec.hpp
chapter03/message/: message.cpp
chapter03/stackauto/: CMakeLists.txt  stackauto.cpp  stackauto.hpp
chapter03/stacknontype/: CMakeLists.txt  stacknontype.cpp
chapter04/addspace/: addspace.hpp
chapter04/foldtraverse/: CMakeLists.txt  foldtraverse.cpp
chapter04/varprint1/: varprint1.hpp
chapter04/varprint2/: varprint2.hpp
chapter04/varusing/: CMakeLists.txt  varusing.cpp
chapter05/arrays/: CMakeLists.txt  arrays.cpp
chapter05/boolstring/: boolstring.hpp  boolstringgetbool.hpp
chapter05/lessarray/: lessarray.hpp
chapter05/lessstring/: lessstring.hpp
chapter09/myfirst2/: CMakeLists.txt  myfirst2.hpp  myfirstmain.cpp
(+27 files in other folders)
